--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@vercel/analytics": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -54,10 +55,11 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-image-annotation": "^0.9.10",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
