--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
     "next": "15.1.7",
