--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "input-otp": "^1.4.2",
     "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
-    "motion": "^12.5.0",
+    "motion": "^12.6.2",
     "next": "15.1.7",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -64,6 +64,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
